k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shop-api
  namespace: shop
  labels:
    app: shop-api
spec:
  selector:
    app: shop-api
  ports:
    - name: http
      port: 80
      targetPort: http
